# awebot-plugins

./: .travis.yml  Cargo.toml  README.md
chatkov/: Cargo.toml
chatkov/data/: chatkov
chatkov/src/: lib.rs
choose/: Cargo.toml
choose/src/: lib.rs
ddg/: Cargo.toml
ddg/src/: lib.rs
flood/: Cargo.toml
flood/src/: lib.rs
invitation/: Cargo.toml  README.md
invitation/src/: lib.rs
keybase/: Cargo.toml
keybase/src/: lib.rs
lewd/: Cargo.toml
lewd/src/: lib.rs
presence/: Cargo.toml
presence/src/: lib.rs
puppet/: Cargo.toml
puppet/src/: lib.rs
quote/: Cargo.toml
quote/src/: lib.rs
reclaim/: Cargo.toml
reclaim/src/: lib.rs
snake/: Cargo.toml
snake/src/: lib.rs
src/: lib.rs
sys/: Cargo.toml
sys/src/: lib.rs
tell/: Cargo.toml
tell/src/: lib.rs
template/: Cargo.toml  README.md
template/src/: lib.rs
timefor/: Cargo.toml
timefor/src/: lib.rs
users/: Cargo.toml
users/src/: lib.rs
whois/: Cargo.toml
whois/src/: lib.rs
